--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mysql2": "^3.9.7",
     "nodemon": "^3.1.1",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
